new measure added

--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
               <button id="orderBy_heartPerFollower">↕</button>Hearts / Followers
             </td>
             <td><button id="orderBy_views">↕</button>10 Views</td>
+            <td>
+              <button id="orderBy_viewPerFollower">↕</button>Views / Followers
+            </td>
             <td><button id="orderBy_videoStats">↕</button>Engagement</td>
           </tr>
         </thead>
